# Omninews_back

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.dev  README.md  Rocket.toml  build.rs  docker-compose.dev.yml  docker-compose.yml
src/: auth_middleware.rs  config.rs  db.rs  db_util.rs  global.rs  main.rs  model.rs  morpheme.rs  routes.rs  schema.sql
src/config/: env.rs  http_auth.rs  logging.rs  mod.rs  openapi.rs  rapidoc.rs  swagger.rs  webdriver.rs
src/dto/: mod.rs
src/dto/auth/: request.rs  response.rs
src/dto/folder/: request.rs  response.rs
src/dto/news/: request.rs  response.rs
src/dto/omninews_subscription/: request.rs  response.rs
src/dto/premium/rss/: request.rs  response.rs
src/dto/rss/: request.rs  response.rs
src/dto/search/: request.rs  response.rs
src/dto/subscribe/: request.rs
src/dto/user/: request.rs  response.rs
src/handler/: bookmark_handler.rs  config_handler.rs  error_handler.rs  feedback_handler.rs  folder_handler.rs  health_handler.rs  mod.rs  news_handler.rs  omninews_subscription_handler.rs  prompt_handler.rs  rss_handler.rs  search_handler.rs  subscribe_handler.rs  subscription_handler.rs  user_handler.rs
src/handler/premium/: mod.rs  rss_generate.rs
src/model/: auth.rs  bookmark.rs  embedding.rs  error.rs  feedback.rs  folder.rs  mod.rs  morpheme.rs  news.rs  omninews_subscription.rs  rss.rs  search.rs  subscription.rs  token.rs  user.rs
src/model/premium/: mod.rs  rss_generate.rs
src/morpheme/: analyze.rs
src/repository/: bookmark_repository.rs  channel_css_repository.rs  embedding_repository.rs  feedback_repository.rs  folder_repository.rs  mod.rs  morpheme_link_mapping_repository.rs  morpheme_repository.rs  morpheme_to_source_link_repository.rs  news_repository.rs  omninews_subscription_repository.rs  rss_channel_repository.rs  rss_item_repository.rs  rss_repository.rs  subscribe_repository.rs  token_repository.rs  user_repository.rs
src/scheduler/: annoy_scheduler.rs  mod.rs  news_scheduler.rs  rss_info_update_scheduler.rs  rss_notification_scheduler.rs  rss_scheduler.rs
src/service/: bookmark_service.rs  channel_css_service.rs  channel_service.rs  embedding_service.rs  feedback_service.rs  folder_service.rs  item_service.rs  mod.rs  morpheme_service.rs  news_service.rs  omninews_subscription_service.rs  rss_service.rs  subscription_service.rs  token_service.rs  user_service.rs
src/service/premium/: mod.rs  premium_rss_service.rs
src/service/premium/site/: default.rs  instagram.rs  medium.rs  mod.rs  naver.rs  tistory.rs
src/service/rss/: channel_service.rs  item_service.rs  mod.rs  search_service.rs
src/utils/: annoy_util.rs  db_util.rs  embedding_util.rs  llama_util.rs  mod.rs
src/utils/firebase/: firebase_util.rs  mod.rs  send_fcm.rs
