[package]
name = "OmniNews"
version = "0.1.0"
edition = "2021"

[dependencies]
# server
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.1", features = ["json"] }

# static
lazy_static = "1.5.0"

# log
log = "0.4.25"
env_logger = "0.11.6"
log4rs = "1.3.0"
thiserror = "2.0.11"

# db, sql
mysql = "*"
#r2d2 = "0.8.10"
#r2d2_mysql = "25.0.0"
sqlx = { version = "0.8", features = ["chrono", "mysql", "runtime-tokio"] }
scraper = "0.22.0"

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# env
dotenv = "0.15"

# API
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# morpheme, mecab
libc = "0.2.169"

# rss parsing
reqwest = { version = "*", features = ["json"] }
rss = "2.0"

# xml 
quick-xml = { version = "*", features = ["serialize"] }

# random
rand = "0.8.4"

# encoding
percent-encoding = "2.3.1"

[build-dependencies]
bindgen = "0.71.1"
