[package]
name = "OmniNews"
version = "0.1.0"
edition = "2021"

[dependencies]
# server
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.1", features = ["json", "secrets"] }

# static
lazy_static = "1.5.0"

# log
log = "0.4.25"
env_logger = "0.11.6"
log4rs = "1.3.0"
thiserror = "2.0.11"

# db, sql
mysql = "*"
sqlx = { version = "0.8", features = ["chrono", "mysql", "runtime-tokio"] }

# crawl
scraper = "0.23.0"

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# env
dotenv = "0.15"

# API
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# rss parsing
reqwest = { version = "*", features = ["json"] }
rss = "2.0"

# crawl
thirtyfour = "0.36.1"

# xml 
quick-xml = { version = "*", features = ["serialize"] }

# random
rand = "0.9.0"

# Sentence embedding
rust-bert = "0.23.0"

# annoy(Approximate Nearest Neighbors Oh Yeah)
rannoy = { git = "https://github.com/uzushino/rs-annoy" }
regex = "1.11.0"

# JWT
jsonwebtoken = "9"

uuid = "1.16.0"

# Swagger
rocket_okapi = { version = "0.9.0", features = [
  "swagger",
  "rapidoc",
  "secrets",
] }

base64 = "0.22.0"

## compatibility issues
console = "0.15"
indicatif = "0.15"

schemars = { version = "0.8.0", features = ["chrono"] }
okapi = { version = "0.7.0-rc.1" }
openssl-sys = "0.9.109"
[build-dependencies]
bindgen = "0.72.0"


[features]
default = ["proc-macro"]
proc-macro = []
